# aegisdb

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  LAUNCH.md  LICENSE  Makefile  README.md  docker-compose.yml
.claude/: settings.json
.github/workflows/: ci.yml  docker.yml  pages.yml  pypi.yml
bench/: hnsw_bench.c  wire_bench.c
docs/: ROADMAP.md  architecture.md  encryption-at-rest-design.md  quickstart.md  read-replica-design.md  summarization-design.md  tutorial-team-server.md  wire-protocol.md
docs/img/: README.md
eval/: README.md  ab_tasks.py  embedders.py  models.py  recall_eval.py
eval/datasets/: ab_tasks.json  coding_agent.json
include/aegisdb/: aead.h  ckpt_crypt.h  client.h  compaction.h  config.h  crc32.h  db.h  encrypt_migrate.h  errors.h  fsutil.h  hash_index.h  hash_mix.h  health.h  hexutil.h  hnsw.h  json_request.h  json_response.h  log.h  logging.h  query_engine.h  randutil.h  record.h  recovery.h  replication.h  restore.h  semantic_index.h  sha256.h  tag_index.h  tcp_server.h  tenant.h  thread_pool.h  time_index.h  types.h  vecmath.h  working_buffer.h
integrations/claude-code/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
integrations/claude-code/aegis_mcp/: __init__.py  capture.py  client.py  config.py  embeddings.py  extract.py  hooks.py  init.py  recall.py  results.py  server.py  summarize.py  summary.py  tools.py
integrations/claude-code/docs/: quickstart.md
integrations/claude-code/examples/: aegisdb-summarize.service  aegisdb-summarize.timer  mcp.json  settings.json  summarize.crontab
integrations/claude-code/hooks/: capture_hook.py  recall_hook.py
integrations/claude-code/skills/aegis-setup/: SKILL.md
integrations/claude-code/tests/: harness.py
integrations/claude-code/tests/contract/: test_hooks.py  test_mcp_tools.py
integrations/claude-code/tests/integration/: test_capture_e2e.py  test_isolation_e2e.py  test_recall_e2e.py  test_semantic_e2e.py  test_summarize_e2e.py  test_tools_e2e.py
integrations/claude-code/tests/unit/: test_capture.py  test_client.py  test_config.py  test_embeddings.py  test_extract.py  test_init.py  test_recall.py  test_summarize.py
integrations/prometheus-exporter/: Dockerfile  README.md  aegis_exporter.py  prometheus.yml
integrations/prometheus-exporter/grafana/dashboards/: aegisdb.json
integrations/prometheus-exporter/grafana/provisioning/dashboards/: dashboard.yml
integrations/prometheus-exporter/grafana/provisioning/datasources/: datasource.yml
integrations/prometheus-exporter/tests/integration/: test_live.py
integrations/prometheus-exporter/tests/unit/: test_render.py
scripts/: aegis-backup.sh  cleanup_captured_code.py  coverage.py
site/: aegis.css  index.html
src/: main.c
src/memory/: record.c  working_buffer.c
src/protocol/: json_request.c  json_response.c
src/query/: query_engine.c
src/server/: replication.c  tcp_server.c  thread_pool.c
src/storage/: ckpt_crypt.c  compaction.c  db.c  encrypt_migrate.c  hash_index.c  hnsw.c  log.c  recovery.c  restore.c  semantic_index.c  tag_index.c  time_index.c
src/util/: chacha20poly1305.c  client.c  config.c  crc32.c  fsutil.c  health.c  hexutil.c  logging.c  randutil.c  sha256.c  status.c  tenant.c
tests/contract/: test_wire_protocol.py
tests/fuzz/: README.md  fuzz_record_decode.c  fuzz_wire.c  gen_seeds.c  standalone_main.c
tests/unit/: CMakeLists.txt  test_aead.c  test_compaction.c  test_config.c  test_crc32.c  test_durability.c  test_fsutil.c  test_hash_index.c  test_health.c  test_hnsw.c  test_indexes.c  test_json_request.c  test_log.c  test_log_encryption.c  test_logging.c  test_query_engine.c  test_record.c  test_recovery.c  test_sha256.c  test_tenant.c  test_working_buffer.c
tools/inspector/: README.md  bridge.py  index.html  test_bridge.py
