[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisdb-mcp"
# Version is derived from the git tag (v0.3.1 -> 0.3.1) by setuptools-scm, so a
# release is just `git tag vX.Y.Z`. CI also sets SETUPTOOLS_SCM_PRETEND_VERSION
# from the tag, which makes the build independent of clone depth / git layout.
dynamic = ["version"]
description = "Integrate AegisDB as persistent memory for Claude Code (MCP server + hooks)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # The MCP server entry point needs the official SDK. All core logic and the
    # hooks run on the standard library alone, so this is only required to serve
    # tools to Claude Code, not to test or run the hooks.
    "mcp>=1.0",
]

[project.urls]
Homepage = "https://github.com/d4n-larsson/aegisdb"
Repository = "https://github.com/d4n-larsson/aegisdb"
Issues = "https://github.com/d4n-larsson/aegisdb/issues"

[project.optional-dependencies]
# Embedding providers are opt-in; the integration runs in `none` mode without them.
voyage = ["voyageai>=0.2"]
local = ["sentence-transformers>=2.2"]
dev = ["pytest>=7"]

[project.scripts]
aegisdb-mcp = "aegis_mcp.server:main"
aegisdb-recall-hook = "aegis_mcp.hooks:recall"
aegisdb-capture-hook = "aegis_mcp.hooks:capture"
aegisdb-summarize = "aegis_mcp.summarize:main"

[tool.setuptools]
packages = ["aegis_mcp"]

[tool.setuptools_scm]
# The package lives in a subdirectory; the git repo root is two levels up.
root = "../.."

[tool.pytest.ini_options]
# Tests are written as stdlib unittest.TestCase, so they run under both
# `python3 -m unittest discover` and `pytest`. The `integration` marker gates
# tests that launch a real aegisdb process.
markers = [
    "integration: end-to-end tests requiring a running aegisdb binary",
]
testpaths = ["tests"]